Fix overflowing issues

--- a/css/main.css
+++ b/css/main.css
@@ -1736,7 +1736,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 }
 @media only screen and (max-width: 600px) {
   #home {
-    min-height: 702px;
+    min-height: 785px;
   }
 
   .home-content-tablecell .row {
